--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/chrishelgert/wintersmith-pattern-library#readme",
   "dependencies": {
     "wintersmith": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^2.3.0",
+    "eslint-config-airbnb": "^6.1.0"
   }
 }
