--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/chrishelgert/wintersmith-pattern-library#readme",
   "dependencies": {
-    "wintersmith": "^2.3.1"
+    "wintersmith": "^2.3.1",
+    "wintersmith-livereload": "^0.2.2"
   },
   "devDependencies": {
     "eslint": "^2.3.0",
