--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "locals": {
-    "title": "Bare minimum wintersmith site"
+    "title": "Pattern Library |"
   },
   "plugins": [
     "wintersmith-livereload"
