moved logic for title from jade to js-plugin

--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "parameterize": "parameterize"
   },
   "plugins": [
-    "wintersmith-livereload"
+    "wintersmith-livereload",
+    "./plugins/helpers.js"
   ]
 }
