--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "wintersmith build",
     "preview": "wintersmith preview",
-    "lint": "eslint ./contents/javascripts/*.js ./contents/javascripts/**/*.js"
+    "lint": "eslint ./pulgins/*.js ./contents/javascripts/**/*.js"
   },
   "repository": {
     "type": "git",
