--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "wintersmith build",
-    "lint": "eslint ./pulgins/*.js ./contents/javascripts/wpl/*.js",
+    "lint": "eslint ./test/plugins/** ./contents/javascripts/wpl/**",
     "preview": "wintersmith preview",
     "test": "npm run lint && ava"
   },
