--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
   },
   "devDependencies": {
     "ava": "^0.14.0",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^7.0.0"
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1"
   },
   "ava": {
     "verbose": true
