--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://danielbayerlein@github.com/danielbayerlein/wintersmith-pattern-library.git"
+    "url": "git+https://github.com/danielbayerlein/wintersmith-pattern-library.git"
   },
   "keywords": [
     "Pattern Library",
