--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run build",
     "build": "wintersmith build",
-    "lint": "eslint ./test/plugins/** ./contents/javascripts/wpl/**",
+    "lint": "eslint ./test/plugins/** ./plugins/** ./contents/javascripts/wpl/**",
     "preview": "wintersmith preview",
     "test": "npm run lint && ava"
   },
