--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "wintersmith build",
     "lint": "eslint --ignore-pattern '/contents/javascripts/libs/*' .",
     "preview": "wintersmith preview",
-    "test": "npm run lint && ava"
+    "test": "npm run lint && jest"
   },
   "repository": {
     "type": "git",
@@ -34,12 +34,9 @@
     "wintersmith-livereload": "^0.2.2"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
-  },
-  "ava": {
-    "verbose": true
+    "eslint-plugin-import": "^2.2.0",
+    "jest": "^20.0.1"
   }
 }
