--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "standard": "^10.0.3"
   },
   "standard": {
-    "env": {
-      "jest": true
-    },
+    "env": [
+      "jest"
+    ],
     "ignore": [
       "/contents/javascripts/libs/"
     ]
